@@ -1,5 +1,10 @@
 2008-11-25  Neal H. Walfield  <neal@gnu.org>
 
+	* src/starling.c (meta_data_changed): New function.
+	(starling_run): Connect ST->DB's "changed-entry" signal to it.
+
+2008-11-25  Neal H. Walfield  <neal@gnu.org>
+
 	* src/musicdb.c (status_kick): Trigger status_update every half
 	second.
 
